# hatoreto-rehoso

./: .gitignore  Cargo.toml  README.md  flake.nix  main.py  pyproject.toml  rate.proto
hosoer/: README.md  bun.lockb  index.html  package.json  tailwind.config.js
hosoer/src/: App.tsx
hosoer/src/apis/: index.ts
src/: handle_peripheral.rs  heartrate.rs  main.rs  srv.rs
